<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/solution_window"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="26dp"
        android:background="#7C066F89"
        android:paddingEnd="45dp"
        android:paddingStart="45dp"
        android:textAlignment="viewEnd"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/result_window"

        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="26dp">

    </TextView>

    <TextView
        android:id="@+id/result_window"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="26dp"
        android:background="#7C066F89"
        android:paddingEnd="45dp"
        android:paddingStart="45dp"
        android:text="0"
        android:textAlignment="viewEnd"
        android:textSize="32sp"

        app:layout_constraintBottom_toTopOf="@+id/button_layout"
        tools:layout_editor_absoluteX="26dp">

    </TextView>

    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cyan_blue"
        android:gravity="bottom"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <LinearLayout
            android:id="@+id/button_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dark_cyan_blue"
            android:gravity="center"
            android:orientation="horizontal">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/subtract_button"
                android:layout_width="65dp"
                android:layout_height="70dp"
                android:layout_margin="10dp"
                android:text="@string/subtraction_button_text"
                android:textSize="25sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/addition_Button"
                android:layout_width="65dp"
                android:layout_height="70dp"
                android:layout_margin="10dp"
                android:text="@string/addition_button_text"
                android:textSize="25sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/multiply_Button"
                android:layout_width="65dp"
                android:layout_height="70dp"
                android:layout_margin="10dp"
                android:text="@string/multiplication_button_text"
                android:textSize="25sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/divide_Button"
                android:layout_width="65dp"
                android:layout_height="70dp"
                android:layout_margin="10dp"
                android:text="@string/division_button_text"
                android:textSize="25sp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/button_row_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dark_cyan_blue"
            android:gravity="center"
            android:orientation="horizontal">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/seven_Button"
                android:layout_width="65dp"
                android:layout_height="70dp"
                android:layout_margin="10dp"
                android:text="@string/seven_button_text"
                android:textSize="25sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/eight_Button"
                android:layout_width="65dp"
                android:layout_height="70dp"
                android:layout_margin="10dp"
                android:text="@string/eight_button_text"
                android:textSize="25sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/nine_Button"
                android:layout_width="65dp"
                android:layout_height="70dp"
                android:layout_margin="10dp"
                android:text="@string/nine_button_text"
                android:textSize="25sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/delete_Button"
                android:layout_width="66dp"
                android:layout_height="70dp"
                android:layout_margin="10dp"
                android:text="@string/delete_button_text"
                android:textSize="12sp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/button_row_three"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dark_cyan_blue"
            android:gravity="center"
            android:orientation="horizontal">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/four_Button"
                android:layout_width="65dp"
                android:layout_height="70dp"
                android:layout_margin="10dp"
                android:text="@string/four_button_text"
                android:textSize="25sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/five_Button"
                android:layout_width="65dp"
                android:layout_height="70dp"
                android:layout_margin="10dp"
                android:text="@string/five_button_text"
                android:textSize="25sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/six_Button"
                android:layout_width="65dp"
                android:layout_height="70dp"
                android:layout_margin="10dp"
                android:text="@string/six_button_text"
                android:textSize="25sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/clear_Button"
                android:layout_width="65dp"
                android:layout_height="70dp"
                android:layout_margin="10dp"
                android:text="@string/clear_button_text"
                android:textSize="25sp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/button_row_four"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dark_cyan_blue"
            android:gravity="center"
            android:orientation="horizontal">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/one_Button"
                android:layout_width="65dp"
                android:layout_height="70dp"
                android:layout_margin="10dp"
                android:text="@string/one_button_text"
                android:textSize="25sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/two_Button"
                android:layout_width="65dp"
                android:layout_height="70dp"
                android:layout_margin="10dp"
                android:text="@string/two_button_text"
                android:textSize="25sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/three_Button"
                android:layout_width="65dp"
                android:layout_height="70dp"
                android:layout_margin="10dp"
                android:text="@string/three_button_text"
                android:textSize="25sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/equals_Button"
                android:layout_width="65dp"
                android:layout_height="70dp"
                android:layout_margin="10dp"
                android:text="@string/equal_button_text"
                android:textSize="25sp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/button_row_five"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/dark_cyan_blue"
            android:gravity="center"
            android:orientation="horizontal"

            >


            <com.google.android.material.button.MaterialButton
                android:id="@+id/zero_Button"
                android:layout_width="65dp"
                android:layout_height="70dp"
                android:layout_margin="10dp"
                android:text="@string/zero_button_text"
                android:textSize="25sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/double_ZeroButton"
                android:layout_width="65dp"
                android:layout_height="70dp"
                android:layout_margin="10dp"
                android:text="@string/doublezero_button_text"
                android:textSize="15sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/decimal_Button"
                android:layout_width="65dp"
                android:layout_height="70dp"
                android:layout_margin="10dp"
                android:text="@string/decimal_button_text"
                android:textSize="25sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sprite_MenuButton"
                android:layout_width="65dp"
                android:layout_height="70dp"
                android:layout_margin="10dp"
                android:text="@string/sprite_menu_button_text"
                android:minHeight="40dp"
                android:textSize="20sp" />


        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>